# library-management-system

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci-cd.yml
backend/: Dockerfile
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/routes/: auth.py  books.py  loans.py  members.py  notifications.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/database/: session.py
backend/app/exceptions/: custom_exceptions.py
backend/app/repositories/: book.py  loan.py  member.py  user.py
backend/app/schemas/: schemas.py
backend/app/services/: book.py  loan.py  member.py  user.py
backend/tests/: test_api.py
backend/workers/: celery_app.py  tasks.py  worker_config.py
cli/: Dockerfile
cli/src/: db.py  main.py  models.py
cli/tests/: test_cli.py
database/: alembic.ini  schema.sql
database/migrations/: env.py
database/migrations/versions/: 001_initial.py
database/seed_data/: seed.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/pages/: Dashboard.jsx  Loans.jsx  Login.jsx  Members.jsx  Signup.jsx
frontend/src/store/: useAuthStore.js
