[project]
name = "library-management-system"
version = "0.1.0"
description = "Monorepo for the Library Management System"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "celery>=5.4.0",
    "redis>=5.0.4",
    "sse-starlette>=2.1.0",
    "psycopg2-binary>=2.9.9",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.9",
    "alembic>=1.13.1",
    "click>=8.1.7",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.uv]
package = false

